yapc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    kDIV
    kIN
    kLABEL
    kMOD
    kPACKED
    kSET
    kWITH

Grammar

Rule 0     S' -> program
Rule 1     program -> program_head routine DOT
Rule 2     program_head -> kPROGRAM ID SEMICON
Rule 3     routine -> routine_head routine_body
Rule 4     routine_head -> const_part type_part var_part routine_part
Rule 5     const_part -> kCONST const_expr_list
Rule 6     const_part -> empty
Rule 7     const_expr_list -> const_expr_list const_expr
Rule 8     const_expr_list -> const_expr
Rule 9     const_expr -> ID EQUAL const_value SEMICON
Rule 10    const_value -> INTEGER
Rule 11    const_value -> REAL
Rule 12    const_value -> CHAR
Rule 13    const_value -> STRING
Rule 14    const_value -> SYS_CON
Rule 15    type_part -> kTYPE type_decl_list
Rule 16    type_part -> empty
Rule 17    type_decl_list -> type_decl_list type_definition
Rule 18    type_decl_list -> type_definition
Rule 19    type_definition -> NAME EQUAL type_decl SEMICON
Rule 20    type_decl -> simple_type_decl
Rule 21    type_decl -> array_type_decl
Rule 22    type_decl -> record_type_decl
Rule 23    simple_type_decl -> SYS_TYPE
Rule 24    simple_type_decl -> LP name_list RP
Rule 25    simple_type_decl -> const_value DOUBLEDOT const_value
Rule 26    simple_type_decl -> ID
Rule 27    array_type_decl -> kARRAY LB simple_type_decl RB kOF type_decl
Rule 28    record_type_decl -> kRECORD field_decl_list kEND
Rule 29    field_decl_list -> field_decl_list field_decl
Rule 30    field_decl_list -> field_decl
Rule 31    field_decl -> name_list COLON type_decl SEMICON
Rule 32    name_list -> name_list COMMA ID
Rule 33    name_list -> ID
Rule 34    var_part -> kVAR var_decl_list
Rule 35    var_part -> empty
Rule 36    var_decl_list -> var_decl_list var_decl
Rule 37    var_decl_list -> var_decl
Rule 38    var_decl -> name_list COLON type_decl SEMICON
Rule 39    routine_part -> routine_part function_decl
Rule 40    routine_part -> routine_part procedure_decl
Rule 41    routine_part -> function_decl
Rule 42    routine_part -> procedure_decl
Rule 43    routine_part -> empty
Rule 44    sub_routine -> routine
Rule 45    function_decl -> function_head SEMICON sub_routine SEMICON
Rule 46    function_head -> kFUNCTION ID parameters COLON simple_type_decl
Rule 47    procedure_decl -> procedure_head SEMICON sub_routine SEMICON
Rule 48    procedure_head -> kPROCEDURE ID parameters
Rule 49    parameters -> LP para_decl_list RP
Rule 50    parameters -> empty
Rule 51    para_decl_list -> para_decl_list SEMICON para_type_list
Rule 52    para_decl_list -> para_type_list
Rule 53    para_type_list -> var_para_list COLON simple_type_decl
Rule 54    var_para_list -> kVAR name_list
Rule 55    val_para_list -> name_list
Rule 56    routine_body -> compound_stmt
Rule 57    compound_stmt -> kBEGIN stmt_list kEND
Rule 58    stmt_list -> stmt_list stmt SEMICON
Rule 59    stmt_list -> empty
Rule 60    stmt -> INTEGER COLON non_label_stmt
Rule 61    stmt -> non_label_stmt
Rule 62    non_label_stmt -> assign_stmt
Rule 63    non_label_stmt -> proc_stmt
Rule 64    non_label_stmt -> compound_stmt
Rule 65    non_label_stmt -> if_stmt
Rule 66    non_label_stmt -> repeat_stmt
Rule 67    non_label_stmt -> while_stmt
Rule 68    non_label_stmt -> for_stmt
Rule 69    non_label_stmt -> case_stmt
Rule 70    non_label_stmt -> goto_stmt
Rule 71    assign_stmt -> ID ASSIGN expression
Rule 72    assign_stmt -> ID LB expression RB ASSIGN expression
Rule 73    assign_stmt -> ID DOT ID ASSIGN expression
Rule 74    proc_stmt -> ID
Rule 75    proc_stmt -> ID LP args_list RP
Rule 76    proc_stmt -> SYS_PROC
Rule 77    proc_stmt -> SYS_PROC LP expression_list RP
Rule 78    proc_stmt -> kREAD LP factor RP
Rule 79    if_stmt -> kIF expression kTHEN stmt else_clause
Rule 80    else_clause -> kELSE stmt
Rule 81    else_clause -> empty
Rule 82    repeat_stmt -> kREPEAT stmt_list kUNTIL expression
Rule 83    while_stmt -> kWHILE expression kDO stmt
Rule 84    for_stmt -> kFOR ID ASSIGN expression direction expression kDO stmt
Rule 85    direction -> kTO
Rule 86    direction -> kDOWNTO
Rule 87    case_stmt -> kCASE expression kOF case_expr_list kEND
Rule 88    case_expr_list -> case_expr_list case_expr
Rule 89    case_expr_list -> case_expr
Rule 90    case_expr -> const_value COLON stmt SEMICON
Rule 91    case_expr -> ID COLON stmt SEMICON
Rule 92    goto_stmt -> kGOTO INTEGER
Rule 93    expression_list -> expression_list COMMA expression
Rule 94    expression_list -> expression
Rule 95    expression -> expression GE expr
Rule 96    expression -> expression GT expr
Rule 97    expression -> expression LE expr
Rule 98    expression -> expression LT expr
Rule 99    expression -> expression EQUAL expr
Rule 100   expression -> expression UNEQUAL expr
Rule 101   expression -> expr
Rule 102   expr -> expr ADD term
Rule 103   expr -> expr SUBTRACT term
Rule 104   expr -> expr kOR term
Rule 105   expr -> term
Rule 106   term -> term MUL factor
Rule 107   term -> term DIV factor
Rule 108   term -> term MOD factor
Rule 109   term -> term kAND factor
Rule 110   term -> factor
Rule 111   factor -> ID
Rule 112   factor -> ID LP args_list RP
Rule 113   factor -> SYS_FUNCT
Rule 114   factor -> SYS_FUNCT LP args_list RP
Rule 115   factor -> const_value
Rule 116   factor -> kNOT factor
Rule 117   factor -> SUBTRACT factor
Rule 118   factor -> ID LB expression RB
Rule 119   factor -> LP expression RP
Rule 120   factor -> ID DOT ID
Rule 121   args_list -> args_list COMMA expression
Rule 122   args_list -> expression
Rule 123   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 102
ASSIGN               : 71 72 73 84
CHAR                 : 12
COLON                : 31 38 46 53 60 90 91
COMMA                : 32 93 121
DIV                  : 107
DOT                  : 1 73 120
DOUBLEDOT            : 25
EQUAL                : 9 19 99
GE                   : 95
GT                   : 96
ID                   : 2 9 26 32 33 46 48 71 72 73 73 74 75 84 91 111 112 118 120 120
INTEGER              : 10 60 92
LB                   : 27 72 118
LE                   : 97
LP                   : 24 49 75 77 78 112 114 119
LT                   : 98
MOD                  : 108
MUL                  : 106
NAME                 : 19
RB                   : 27 72 118
REAL                 : 11
RP                   : 24 49 75 77 78 112 114 119
SEMICON              : 2 9 19 31 38 45 45 47 47 51 58 90 91
STRING               : 13
SUBTRACT             : 103 117
SYS_CON              : 14
SYS_FUNCT            : 113 114
SYS_PROC             : 76 77
SYS_TYPE             : 23
UNEQUAL              : 100
error                : 
kAND                 : 109
kARRAY               : 27
kBEGIN               : 57
kCASE                : 87
kCONST               : 5
kDIV                 : 
kDO                  : 83 84
kDOWNTO              : 86
kELSE                : 80
kEND                 : 28 57 87
kFOR                 : 84
kFUNCTION            : 46
kGOTO                : 92
kIF                  : 79
kIN                  : 
kLABEL               : 
kMOD                 : 
kNOT                 : 116
kOF                  : 27 87
kOR                  : 104
kPACKED              : 
kPROCEDURE           : 48
kPROGRAM             : 2
kREAD                : 78
kRECORD              : 28
kREPEAT              : 82
kSET                 : 
kTHEN                : 79
kTO                  : 85
kTYPE                : 15
kUNTIL               : 82
kVAR                 : 34 54
kWHILE               : 83
kWITH                : 

Nonterminals, with rules where they appear

args_list            : 75 112 114 121
array_type_decl      : 21
assign_stmt          : 62
case_expr            : 88 89
case_expr_list       : 87 88
case_stmt            : 69
compound_stmt        : 56 64
const_expr           : 7 8
const_expr_list      : 5 7
const_part           : 4
const_value          : 9 25 25 90 115
direction            : 84
else_clause          : 79
empty                : 6 16 35 43 50 59 81
expr                 : 95 96 97 98 99 100 101 102 103 104
expression           : 71 72 72 73 79 82 83 84 84 87 93 94 95 96 97 98 99 100 118 119 121 122
expression_list      : 77 93
factor               : 78 106 107 108 109 110 116 117
field_decl           : 29 30
field_decl_list      : 28 29
for_stmt             : 68
function_decl        : 39 41
function_head        : 45
goto_stmt            : 70
if_stmt              : 65
name_list            : 24 31 32 38 54 55
non_label_stmt       : 60 61
para_decl_list       : 49 51
para_type_list       : 51 52
parameters           : 46 48
proc_stmt            : 63
procedure_decl       : 40 42
procedure_head       : 47
program              : 0
program_head         : 1
record_type_decl     : 22
repeat_stmt          : 66
routine              : 1 44
routine_body         : 3
routine_head         : 3
routine_part         : 4 39 40
simple_type_decl     : 20 27 46 53
stmt                 : 58 79 80 83 84 90 91
stmt_list            : 57 58 82
sub_routine          : 45 47
term                 : 102 103 104 105 106 107 108 109
type_decl            : 19 27 31 38
type_decl_list       : 15 17
type_definition      : 17 18
type_part            : 4
val_para_list        : 
var_decl             : 36 37
var_decl_list        : 34 36
var_para_list        : 53
var_part             : 4
while_stmt           : 67

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_head routine DOT
    (2) program_head -> . kPROGRAM ID SEMICON

    kPROGRAM        shift and go to state 3

    program                        shift and go to state 1
    program_head                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_head . routine DOT
    (3) routine -> . routine_head routine_body
    (4) routine_head -> . const_part type_part var_part routine_part
    (5) const_part -> . kCONST const_expr_list
    (6) const_part -> . empty
    (123) empty -> .

    kCONST          shift and go to state 7
    kTYPE           reduce using rule 123 (empty -> .)
    kVAR            reduce using rule 123 (empty -> .)
    kFUNCTION       reduce using rule 123 (empty -> .)
    kPROCEDURE      reduce using rule 123 (empty -> .)
    kBEGIN          reduce using rule 123 (empty -> .)

    routine                        shift and go to state 4
    routine_head                   shift and go to state 5
    const_part                     shift and go to state 6
    empty                          shift and go to state 8

state 3

    (2) program_head -> kPROGRAM . ID SEMICON

    ID              shift and go to state 9


state 4

    (1) program -> program_head routine . DOT

    DOT             shift and go to state 10


state 5

    (3) routine -> routine_head . routine_body
    (56) routine_body -> . compound_stmt
    (57) compound_stmt -> . kBEGIN stmt_list kEND

    kBEGIN          shift and go to state 13

    routine_body                   shift and go to state 11
    compound_stmt                  shift and go to state 12

state 6

    (4) routine_head -> const_part . type_part var_part routine_part
    (15) type_part -> . kTYPE type_decl_list
    (16) type_part -> . empty
    (123) empty -> .

    kTYPE           shift and go to state 15
    kVAR            reduce using rule 123 (empty -> .)
    kFUNCTION       reduce using rule 123 (empty -> .)
    kPROCEDURE      reduce using rule 123 (empty -> .)
    kBEGIN          reduce using rule 123 (empty -> .)

    type_part                      shift and go to state 14
    empty                          shift and go to state 16

state 7

    (5) const_part -> kCONST . const_expr_list
    (7) const_expr_list -> . const_expr_list const_expr
    (8) const_expr_list -> . const_expr
    (9) const_expr -> . ID EQUAL const_value SEMICON

    ID              shift and go to state 19

    const_expr_list                shift and go to state 17
    const_expr                     shift and go to state 18

state 8

    (6) const_part -> empty .

    kTYPE           reduce using rule 6 (const_part -> empty .)
    kVAR            reduce using rule 6 (const_part -> empty .)
    kFUNCTION       reduce using rule 6 (const_part -> empty .)
    kPROCEDURE      reduce using rule 6 (const_part -> empty .)
    kBEGIN          reduce using rule 6 (const_part -> empty .)


state 9

    (2) program_head -> kPROGRAM ID . SEMICON

    SEMICON         shift and go to state 20


state 10

    (1) program -> program_head routine DOT .

    $end            reduce using rule 1 (program -> program_head routine DOT .)


state 11

    (3) routine -> routine_head routine_body .

    DOT             reduce using rule 3 (routine -> routine_head routine_body .)
    SEMICON         reduce using rule 3 (routine -> routine_head routine_body .)


state 12

    (56) routine_body -> compound_stmt .

    DOT             reduce using rule 56 (routine_body -> compound_stmt .)
    SEMICON         reduce using rule 56 (routine_body -> compound_stmt .)


state 13

    (57) compound_stmt -> kBEGIN . stmt_list kEND
    (58) stmt_list -> . stmt_list stmt SEMICON
    (59) stmt_list -> . empty
    (123) empty -> .

    kEND            reduce using rule 123 (empty -> .)
    INTEGER         reduce using rule 123 (empty -> .)
    ID              reduce using rule 123 (empty -> .)
    SYS_PROC        reduce using rule 123 (empty -> .)
    kREAD           reduce using rule 123 (empty -> .)
    kBEGIN          reduce using rule 123 (empty -> .)
    kIF             reduce using rule 123 (empty -> .)
    kREPEAT         reduce using rule 123 (empty -> .)
    kWHILE          reduce using rule 123 (empty -> .)
    kFOR            reduce using rule 123 (empty -> .)
    kCASE           reduce using rule 123 (empty -> .)
    kGOTO           reduce using rule 123 (empty -> .)

    stmt_list                      shift and go to state 21
    empty                          shift and go to state 22

state 14

    (4) routine_head -> const_part type_part . var_part routine_part
    (34) var_part -> . kVAR var_decl_list
    (35) var_part -> . empty
    (123) empty -> .

    kVAR            shift and go to state 24
    kFUNCTION       reduce using rule 123 (empty -> .)
    kPROCEDURE      reduce using rule 123 (empty -> .)
    kBEGIN          reduce using rule 123 (empty -> .)

    var_part                       shift and go to state 23
    empty                          shift and go to state 25

state 15

    (15) type_part -> kTYPE . type_decl_list
    (17) type_decl_list -> . type_decl_list type_definition
    (18) type_decl_list -> . type_definition
    (19) type_definition -> . NAME EQUAL type_decl SEMICON

    NAME            shift and go to state 28

    type_decl_list                 shift and go to state 26
    type_definition                shift and go to state 27

state 16

    (16) type_part -> empty .

    kVAR            reduce using rule 16 (type_part -> empty .)
    kFUNCTION       reduce using rule 16 (type_part -> empty .)
    kPROCEDURE      reduce using rule 16 (type_part -> empty .)
    kBEGIN          reduce using rule 16 (type_part -> empty .)


state 17

    (5) const_part -> kCONST const_expr_list .
    (7) const_expr_list -> const_expr_list . const_expr
    (9) const_expr -> . ID EQUAL const_value SEMICON

    kTYPE           reduce using rule 5 (const_part -> kCONST const_expr_list .)
    kVAR            reduce using rule 5 (const_part -> kCONST const_expr_list .)
    kFUNCTION       reduce using rule 5 (const_part -> kCONST const_expr_list .)
    kPROCEDURE      reduce using rule 5 (const_part -> kCONST const_expr_list .)
    kBEGIN          reduce using rule 5 (const_part -> kCONST const_expr_list .)
    ID              shift and go to state 19

    const_expr                     shift and go to state 29

state 18

    (8) const_expr_list -> const_expr .

    ID              reduce using rule 8 (const_expr_list -> const_expr .)
    kTYPE           reduce using rule 8 (const_expr_list -> const_expr .)
    kVAR            reduce using rule 8 (const_expr_list -> const_expr .)
    kFUNCTION       reduce using rule 8 (const_expr_list -> const_expr .)
    kPROCEDURE      reduce using rule 8 (const_expr_list -> const_expr .)
    kBEGIN          reduce using rule 8 (const_expr_list -> const_expr .)


state 19

    (9) const_expr -> ID . EQUAL const_value SEMICON

    EQUAL           shift and go to state 30


state 20

    (2) program_head -> kPROGRAM ID SEMICON .

    kCONST          reduce using rule 2 (program_head -> kPROGRAM ID SEMICON .)
    kBEGIN          reduce using rule 2 (program_head -> kPROGRAM ID SEMICON .)
    kTYPE           reduce using rule 2 (program_head -> kPROGRAM ID SEMICON .)
    kVAR            reduce using rule 2 (program_head -> kPROGRAM ID SEMICON .)
    kFUNCTION       reduce using rule 2 (program_head -> kPROGRAM ID SEMICON .)
    kPROCEDURE      reduce using rule 2 (program_head -> kPROGRAM ID SEMICON .)


state 21

    (57) compound_stmt -> kBEGIN stmt_list . kEND
    (58) stmt_list -> stmt_list . stmt SEMICON
    (60) stmt -> . INTEGER COLON non_label_stmt
    (61) stmt -> . non_label_stmt
    (62) non_label_stmt -> . assign_stmt
    (63) non_label_stmt -> . proc_stmt
    (64) non_label_stmt -> . compound_stmt
    (65) non_label_stmt -> . if_stmt
    (66) non_label_stmt -> . repeat_stmt
    (67) non_label_stmt -> . while_stmt
    (68) non_label_stmt -> . for_stmt
    (69) non_label_stmt -> . case_stmt
    (70) non_label_stmt -> . goto_stmt
    (71) assign_stmt -> . ID ASSIGN expression
    (72) assign_stmt -> . ID LB expression RB ASSIGN expression
    (73) assign_stmt -> . ID DOT ID ASSIGN expression
    (74) proc_stmt -> . ID
    (75) proc_stmt -> . ID LP args_list RP
    (76) proc_stmt -> . SYS_PROC
    (77) proc_stmt -> . SYS_PROC LP expression_list RP
    (78) proc_stmt -> . kREAD LP factor RP
    (57) compound_stmt -> . kBEGIN stmt_list kEND
    (79) if_stmt -> . kIF expression kTHEN stmt else_clause
    (82) repeat_stmt -> . kREPEAT stmt_list kUNTIL expression
    (83) while_stmt -> . kWHILE expression kDO stmt
    (84) for_stmt -> . kFOR ID ASSIGN expression direction expression kDO stmt
    (87) case_stmt -> . kCASE expression kOF case_expr_list kEND
    (92) goto_stmt -> . kGOTO INTEGER

    kEND            shift and go to state 31
    INTEGER         shift and go to state 33
    ID              shift and go to state 44
    SYS_PROC        shift and go to state 45
    kREAD           shift and go to state 46
    kBEGIN          shift and go to state 13
    kIF             shift and go to state 47
    kREPEAT         shift and go to state 48
    kWHILE          shift and go to state 49
    kFOR            shift and go to state 50
    kCASE           shift and go to state 51
    kGOTO           shift and go to state 52

    stmt                           shift and go to state 32
    non_label_stmt                 shift and go to state 34
    assign_stmt                    shift and go to state 35
    proc_stmt                      shift and go to state 36
    compound_stmt                  shift and go to state 37
    if_stmt                        shift and go to state 38
    repeat_stmt                    shift and go to state 39
    while_stmt                     shift and go to state 40
    for_stmt                       shift and go to state 41
    case_stmt                      shift and go to state 42
    goto_stmt                      shift and go to state 43

state 22

    (59) stmt_list -> empty .

    kEND            reduce using rule 59 (stmt_list -> empty .)
    INTEGER         reduce using rule 59 (stmt_list -> empty .)
    ID              reduce using rule 59 (stmt_list -> empty .)
    SYS_PROC        reduce using rule 59 (stmt_list -> empty .)
    kREAD           reduce using rule 59 (stmt_list -> empty .)
    kBEGIN          reduce using rule 59 (stmt_list -> empty .)
    kIF             reduce using rule 59 (stmt_list -> empty .)
    kREPEAT         reduce using rule 59 (stmt_list -> empty .)
    kWHILE          reduce using rule 59 (stmt_list -> empty .)
    kFOR            reduce using rule 59 (stmt_list -> empty .)
    kCASE           reduce using rule 59 (stmt_list -> empty .)
    kGOTO           reduce using rule 59 (stmt_list -> empty .)
    kUNTIL          reduce using rule 59 (stmt_list -> empty .)


state 23

    (4) routine_head -> const_part type_part var_part . routine_part
    (39) routine_part -> . routine_part function_decl
    (40) routine_part -> . routine_part procedure_decl
    (41) routine_part -> . function_decl
    (42) routine_part -> . procedure_decl
    (43) routine_part -> . empty
    (45) function_decl -> . function_head SEMICON sub_routine SEMICON
    (47) procedure_decl -> . procedure_head SEMICON sub_routine SEMICON
    (123) empty -> .
    (46) function_head -> . kFUNCTION ID parameters COLON simple_type_decl
    (48) procedure_head -> . kPROCEDURE ID parameters

  ! shift/reduce conflict for kFUNCTION resolved as shift
  ! shift/reduce conflict for kPROCEDURE resolved as shift
    kBEGIN          reduce using rule 123 (empty -> .)
    kFUNCTION       shift and go to state 59
    kPROCEDURE      shift and go to state 60

  ! kFUNCTION       [ reduce using rule 123 (empty -> .) ]
  ! kPROCEDURE      [ reduce using rule 123 (empty -> .) ]
